test/tests/LambdaError.frost
method test(f:(Int8)=>(Int8)):Int8 {
    return f(12)
}

method test(f:(Int16)=>(Int16)):Int16 {
    return f(12)
}

method test(f:(String)=>(String)):String {
    return f("Hello")
}

method main() {
    Console.printLine(test(x => x.utf8))
}
